--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 autopep8==1.7.0
 Django==4.1
+django-crispy-forms==1.14.0
 pycodestyle==2.9.1
 python-decouple==3.6
 sqlparse==0.4.2
